--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,6 @@
+version: "2"
 linters:
-  disable-all: true
+  default: none
   enable:
     - asasalint
     - asciicheck
@@ -10,7 +11,6 @@ linters:
     - contextcheck
     - copyloopvar
     - cyclop
-#   - decorder # Sometimes it is more expressive to order declarations in a certain way.
     - depguard
     - dogsled
     - dupl
@@ -23,12 +23,10 @@ linters:
     - errorlint
     - exhaustive
     - exhaustruct
+    - exptostd
     - fatcontext
-#   - forbidigo # Will be enabled if something needs to be forbidden.
     - forcetypeassert
     - funlen
-#   - gci # Prefer goimports behaviour.
-#   - ginkgolinter # No plans to use ginkgo for testing, prefer using std "testing".
     - gocheckcompilerdirectives
     - gochecknoglobals
     - gochecknoinits
@@ -39,27 +37,18 @@ linters:
     - gocyclo
     - godot
     - godox
-    - gofmt
-    - gofumpt
-#   - goheader # I don't use file headers.
-    - goimports
     - gomoddirectives
-#   - gomodguard # Prefer depguard.
     - goprintffuncname
     - gosec
-    - gosimple
     - gosmopolitan
     - govet
     - grouper
     - iface
-#   - importas # Enabled as needed per project.
     - inamedparam
     - ineffassign
     - interfacebloat
     - intrange
     - ireturn
-#   - lll # Go code can be more expressive and readable on a single line.
-#   - loggercheck # No plans to use external logging libraries, prefer using std "log/slog".
     - maintidx
     - makezero
     - mirror
@@ -69,17 +58,16 @@ linters:
     - nakedret
     - nestif
     - nilerr
+    - nilnesserr
     - nilnil
     - nlreturn
     - noctx
     - nolintlint
-#   - nonamedreturns # Naked retursn disabled through nakedret.
     - nosprintfhostport
     - paralleltest
     - perfsprint
     - prealloc
     - predeclared
-#   - promlinter # No plans to use Prometheus.
     - protogetter
     - reassign
     - recvcheck
@@ -89,12 +77,9 @@ linters:
     - spancheck
     - sqlclosecheck
     - staticcheck
-    - stylecheck
     - tagalign
     - tagliatelle
-    - tenv
     - testableexamples
-#   - testifylint # No plans to use Testify for testing, prefer using std "testing".
     - testpackage
     - thelper
     - tparallel
@@ -102,96 +87,128 @@ linters:
     - unparam
     - unused
     - usestdlibvars
-#   - varnamelen # Too strict in most cases hindering expressiveness.
+    - usetesting
     - wastedassign
     - whitespace
     - wrapcheck
-    - wsl
-#   - zerologlint # No plans to use zerolog, prefer using std "log/slog".
-linters-settings:
-  copyloopvar:
-    check-alias: true
-  depguard:
+    - wsl_v5
+  settings:
+    copyloopvar:
+      check-alias: true
+    depguard:
+      rules:
+        main:
+          list-mode: strict
+          allow:
+            - $gostd
+            - github.com/nickbryan/slogutil
+            - github.com/google/go-cmp/cmp
+    errcheck:
+      check-type-assertions: true
+    exhaustive:
+      check:
+        - switch
+        - map
+      default-signifies-exhaustive: true
+    funlen:
+      ignore-comments: true
+    gocognit:
+      min-complexity: 15
+    gocyclo:
+      min-complexity: 15
+    grouper:
+      const-require-grouping: true
+      import-require-grouping: true
+    interfacebloat:
+      max: 3
+    ireturn:
+      allow:
+        - anon
+        - error
+        - empty
+        - generic
+        - stdlib
+    misspell:
+      locale: US
+    nestif:
+      min-complexity: 7
+    nilnil:
+      detect-opposite: true
+    nlreturn:
+      block-size: 2
+    nolintlint:
+      require-explanation: true
+      require-specific: true
+    sloglint:
+      attr-only: true
+      no-global: all
+      context: all
+      static-msg: true
+      key-naming-case: snake
+      forbidden-keys:
+        - time
+        - level
+        - msg
+        - source
+    tagalign:
+      order:
+        - json
+        - query
+        - path
+        - header
+        - default
+        - validate
+    usestdlibvars:
+      time-month: true
+      time-layout: true
+      crypto-hash: true
+      default-rpc-path: true
+      sql-isolation-level: true
+      tls-signature-scheme: true
+      constant-kind: true
+    usetesting:
+      os-temp-dir: true
+  exclusions:
+    generated: lax
     rules:
-      main:
-        list-mode: strict
-        allow:
-          - $gostd
-          - github.com/nickbryan/slogutil
-          - github.com/google/go-cmp/cmp
-  errcheck:
-    check-type-assertions: true
-  exhaustive:
-    check:
-      - switch
-      - map
-    default-signifies-exhaustive: true
-  funlen:
-    ignore-comments: true
-  gocognit:
-    min-complexity: 15
-  goconst:
-    ignore-tests: true
-  gocyclo:
-    min-complexity: 15
-  gofumpt:
-    extra-rules: true
-  goimports:
-    local-prefixes: github.com/nickbryan
-  grouper:
-    const-require-grouping: true
-    import-require-grouping: true
-  interfacebloat:
-    max: 3
-  misspell:
-    locale: US # US English is most common in software code so keep it familiar.
-  nakedret:
-    max-func-lines: 0
-  nestif:
-    min-complexity: 3
-  nilnil:
-    detect-opposite: true
-  nlreturn:
-    block-size: 2
-  nolintlint:
-    require-explanation: true
-    require-specific: true
-  rowserrcheck:
-    packages:
-      github.com/jackc/pgx
-  sloglint:
-    attr-only: true
-    no-global: "all"
-    context: "all"
-    static-msg: true
-    key-naming-case: snake
-    forbidden-keys:
-      - time
-      - level
-      - msg
-      - source
-  usestdlibvars:
-    time-month: true
-    time-layout: true
-    crypto-hash: true
-    default-rpc-path: true
-    sql-isolation-level: true
-    tls-signature-scheme: true
-    constant-kind: true
+      - linters:
+          - gochecknoglobals
+          - containedctx
+          - cyclop
+          - err113
+          - exhaustruct
+          - funlen
+          - gocognit
+          - gocyclo
+          - maintidx
+          - nestif
+          - nilnil
+          - wrapcheck
+        path: _test\.go
+      - linters:
+          - goconst
+        path: (.+)_test\.go
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
 issues:
-  exclude-rules:
-    - path: _test\.go
-      linters:
-        - containedctx
-        - exhaustruct
-        - funlen
-        - gocognit
-        - err113
-        - maintidx
-        - nestif
-  exclude-use-default: false
   max-issues-per-linter: 0
   max-same-issues: 0
-output:
-  sort-results: true
-  show-stats: true
+formatters:
+  enable:
+    - gofmt
+    - gofumpt
+    - goimports
+  settings:
+    gofumpt:
+      extra-rules: true
+    goimports:
+      local-prefixes:
+        - github.com/nickbryan
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
